[STORM-3965] Allow reflection access to java.nio for protobug in JDK11 and above.